--- a/Jenkins/pom.xml
+++ b/Jenkins/pom.xml
@@ -24,7 +24,7 @@
 				<configuration>
 					<archive>
 						<manifest>
-							<mainClass>test.Test</mainClass>
+							<mainClass>jenkins.JenkinsExample</mainClass>
 						</manifest>
 					</archive>
 				</configuration>
